Commented out message logging for debugging and fixed url for remote call

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,5 +4,5 @@
         <a routerLink="/songs">Songs</a>
     </nav>
     <router-outlet></router-outlet>
-    <app-messages></app-messages>
+    <!-- <app-messages></app-messages> -->
 </div>
