Replaced message component with user-alert component. Added more information user can read to be user friendly.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,5 @@
 <div class="container">
     <h1>{{title}}</h1>
-    <nav>
-        <a routerLink="/songs">Songs</a>
-    </nav>
+    <app-user-alert></app-user-alert>
     <router-outlet></router-outlet>
-    <!-- <app-messages></app-messages> -->
 </div>
