--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -1,4 +1,5 @@
 <input #search (keyup)="this.getSongs(search.value)" type="text" class="form-control" placeholder="Search for a song here" aria-label="" aria-describedby="1">
+<div>{{message}}</div>
 <table class="table">
     <thead>
         <tr>
