Moved scroll to top functions to app component and fixed location of loading circle

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,4 +2,5 @@
     <h1>{{title}}</h1>
     <app-user-alert></app-user-alert>
     <router-outlet></router-outlet>
+    <button id=scrollToTop (click)="this.topFunction()">Top</button>
 </div>
