Search separated into its own component

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,12 +33,9 @@ div.sticky {
     background-color: white;
 }
 
-
 #scrollSpinner {
-    position: sticky;
+    position: relative;
     left: 50%;
-    top: 50%;
-    z-index: 1;
 }
 
 #scrollToTop {
