--- a/src/app/songs/songs.component.html
+++ b/src/app/songs/songs.component.html
@@ -1,6 +1,6 @@
-<div class="sticky"><input #search (keyup)="this.getSongs(search.value)" type="text" class="form-control"
-    placeholder="Search for a song here" aria-label="" aria-describedby="1">
-<div >{{message}}</div>
+<div class="sticky">
+    <app-song-search [value]=this.currentSearchQuery></app-song-search>
+    <div >{{message}}</div>
 </div>
 <div id="player"></div>
 
@@ -13,9 +13,7 @@
         (scrolled)="getMoreSongs()"
         [scrollWindow]="true"
     >
-    <div id="scrollSpinner" class="spinner-border hidden" role="status">
-        <span class="sr-only">Loading...</span>
-    </div>
+    
     <div *ngFor="let song of songs; let i=index">
         <ng-container *ngIf="i % 3 == 0">
             <div class="row">
@@ -57,5 +55,8 @@
                 </ng-container>
             </div>
         </ng-container>
+    </div>
+    <div id="scrollSpinner" class="spinner-border hidden" role="status">
+        <span class="sr-only">Loading...</span>
     </div>
 </div>
